more work on history logging

--- a/index.html
+++ b/index.html
@@ -5173,7 +5173,39 @@ var $elm$core$Task$perform = F2(
 				A2($elm$core$Task$map, toMessage, task)));
 	});
 var $elm$browser$Browser$element = _Browser_element;
-var $author$project$Main$initialModel = {activeBidders: _List_Nil, bidHistory: _List_Nil, factor: 1.0, formParticipant: '', formRent: '', formRoom: '', participants: _List_Nil, rooms: _List_Nil, showAuctionView: true, showInputs: true, totalRent: $elm$core$Maybe$Nothing, unAllocatedRent: 0.0};
+var $author$project$Auction$Bid = F2(
+	function (a, b) {
+		return {$: 'Bid', a: a, b: b};
+	});
+var $author$project$Auction$Fold = function (a) {
+	return {$: 'Fold', a: a};
+};
+var $author$project$Main$ShowInput = {$: 'ShowInput'};
+var $author$project$Main$initialModel = {
+	activeBidders: _List_Nil,
+	bidHistory: _List_fromArray(
+		[
+			A2(
+			$author$project$Auction$Bid,
+			40.0,
+			{name: 'Steve'}),
+			$author$project$Auction$Fold(
+			{name: 'Gerry'}),
+			A2(
+			$author$project$Auction$Bid,
+			35.0,
+			{name: 'Eustace'})
+		]),
+	factor: 1.0,
+	formParticipant: '',
+	formRent: '',
+	formRoom: '',
+	participants: _List_Nil,
+	rooms: _List_Nil,
+	totalRent: $elm$core$Maybe$Nothing,
+	uiState: $author$project$Main$ShowInput,
+	unAllocatedRent: 0.0
+};
 var $elm$core$Platform$Cmd$batch = _Platform_batch;
 var $elm$core$Platform$Cmd$none = $elm$core$Platform$Cmd$batch(_List_Nil);
 var $elm$core$Platform$Sub$batch = _Platform_batch;
@@ -5189,6 +5221,158 @@ var $elm$core$List$append = F2(
 			return A3($elm$core$List$foldr, $elm$core$List$cons, ys, xs);
 		}
 	});
+var $elm$core$List$drop = F2(
+	function (n, list) {
+		drop:
+		while (true) {
+			if (n <= 0) {
+				return list;
+			} else {
+				if (!list.b) {
+					return list;
+				} else {
+					var x = list.a;
+					var xs = list.b;
+					var $temp$n = n - 1,
+						$temp$list = xs;
+					n = $temp$n;
+					list = $temp$list;
+					continue drop;
+				}
+			}
+		}
+	});
+var $elm$core$List$takeReverse = F3(
+	function (n, list, kept) {
+		takeReverse:
+		while (true) {
+			if (n <= 0) {
+				return kept;
+			} else {
+				if (!list.b) {
+					return kept;
+				} else {
+					var x = list.a;
+					var xs = list.b;
+					var $temp$n = n - 1,
+						$temp$list = xs,
+						$temp$kept = A2($elm$core$List$cons, x, kept);
+					n = $temp$n;
+					list = $temp$list;
+					kept = $temp$kept;
+					continue takeReverse;
+				}
+			}
+		}
+	});
+var $elm$core$List$takeTailRec = F2(
+	function (n, list) {
+		return $elm$core$List$reverse(
+			A3($elm$core$List$takeReverse, n, list, _List_Nil));
+	});
+var $elm$core$List$takeFast = F3(
+	function (ctr, n, list) {
+		if (n <= 0) {
+			return _List_Nil;
+		} else {
+			var _v0 = _Utils_Tuple2(n, list);
+			_v0$1:
+			while (true) {
+				_v0$5:
+				while (true) {
+					if (!_v0.b.b) {
+						return list;
+					} else {
+						if (_v0.b.b.b) {
+							switch (_v0.a) {
+								case 1:
+									break _v0$1;
+								case 2:
+									var _v2 = _v0.b;
+									var x = _v2.a;
+									var _v3 = _v2.b;
+									var y = _v3.a;
+									return _List_fromArray(
+										[x, y]);
+								case 3:
+									if (_v0.b.b.b.b) {
+										var _v4 = _v0.b;
+										var x = _v4.a;
+										var _v5 = _v4.b;
+										var y = _v5.a;
+										var _v6 = _v5.b;
+										var z = _v6.a;
+										return _List_fromArray(
+											[x, y, z]);
+									} else {
+										break _v0$5;
+									}
+								default:
+									if (_v0.b.b.b.b && _v0.b.b.b.b.b) {
+										var _v7 = _v0.b;
+										var x = _v7.a;
+										var _v8 = _v7.b;
+										var y = _v8.a;
+										var _v9 = _v8.b;
+										var z = _v9.a;
+										var _v10 = _v9.b;
+										var w = _v10.a;
+										var tl = _v10.b;
+										return (ctr > 1000) ? A2(
+											$elm$core$List$cons,
+											x,
+											A2(
+												$elm$core$List$cons,
+												y,
+												A2(
+													$elm$core$List$cons,
+													z,
+													A2(
+														$elm$core$List$cons,
+														w,
+														A2($elm$core$List$takeTailRec, n - 4, tl))))) : A2(
+											$elm$core$List$cons,
+											x,
+											A2(
+												$elm$core$List$cons,
+												y,
+												A2(
+													$elm$core$List$cons,
+													z,
+													A2(
+														$elm$core$List$cons,
+														w,
+														A3($elm$core$List$takeFast, ctr + 1, n - 4, tl)))));
+									} else {
+										break _v0$5;
+									}
+							}
+						} else {
+							if (_v0.a === 1) {
+								break _v0$1;
+							} else {
+								break _v0$5;
+							}
+						}
+					}
+				}
+				return list;
+			}
+			var _v1 = _v0.b;
+			var x = _v1.a;
+			return _List_fromArray(
+				[x]);
+		}
+	});
+var $elm$core$List$take = F2(
+	function (n, list) {
+		return A3($elm$core$List$takeFast, 0, n, list);
+	});
+var $author$project$Auction$cycleActive = function (active) {
+	var rest = A2($elm$core$List$drop, 1, active);
+	var newBack = A2($elm$core$List$take, 1, active);
+	return _Utils_ap(rest, newBack);
+};
 var $elm$core$String$toFloat = _String_toFloat;
 var $author$project$Main$update = F2(
 	function (msg, model) {
@@ -5264,37 +5448,43 @@ var $author$project$Main$update = F2(
 				return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
 			default:
 				var item = msg.a;
-				return _Utils_Tuple2(model, $elm$core$Platform$Cmd$none);
+				if (item.$ === 'Bid') {
+					var amount = item.a;
+					var person = item.b;
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{
+								activeBidders: $author$project$Auction$cycleActive(model.activeBidders),
+								bidHistory: A2(
+									$elm$core$List$cons,
+									A2($author$project$Auction$Bid, amount, person),
+									model.bidHistory)
+							}),
+						$elm$core$Platform$Cmd$none);
+				} else {
+					return _Utils_Tuple2(
+						_Utils_update(
+							model,
+							{
+								activeBidders: A2($elm$core$List$drop, 1, model.activeBidders),
+								bidHistory: A2($elm$core$List$cons, item, model.bidHistory)
+							}),
+						$elm$core$Platform$Cmd$none);
+				}
 		}
 	});
+var $author$project$Main$ReceiveHistory = function (a) {
+	return {$: 'ReceiveHistory', a: a};
+};
 var $elm$html$Html$button = _VirtualDom_node('button');
 var $elm$html$Html$div = _VirtualDom_node('div');
 var $elm$html$Html$h2 = _VirtualDom_node('h2');
 var $elm$html$Html$p = _VirtualDom_node('p');
 var $elm$virtual_dom$VirtualDom$text = _VirtualDom_text;
 var $elm$html$Html$text = $elm$virtual_dom$VirtualDom$text;
-var $author$project$Main$incompleteSetupDash = A2(
-	$elm$html$Html$div,
-	_List_Nil,
-	_List_fromArray(
-		[
-			A2(
-			$elm$html$Html$h2,
-			_List_Nil,
-			_List_fromArray(
-				[
-					$elm$html$Html$text('Auction')
-				])),
-			A2(
-			$elm$html$Html$p,
-			_List_Nil,
-			_List_fromArray(
-				[
-					$elm$html$Html$text('Incomplete setup!')
-				]))
-		]));
 var $author$project$Main$auctionDashboard = function (model) {
-	return (!model.showAuctionView) ? $author$project$Main$incompleteSetupDash : A2(
+	return A2(
 		$elm$html$Html$div,
 		_List_Nil,
 		_List_fromArray(
@@ -5329,13 +5519,75 @@ var $author$project$Main$auctionDashboard = function (model) {
 					]))
 			]));
 };
-var $author$project$Main$AddParticipant = function (a) {
-	return {$: 'AddParticipant', a: a};
+var $elm$html$Html$h3 = _VirtualDom_node('h3');
+var $author$project$Auction$loggifyHistoryItem = function (item) {
+	if (item.$ === 'Bid') {
+		var bid = item.a;
+		var person = item.b;
+		return {
+			bidAmount: $elm$core$Maybe$Just(bid),
+			bidder: person
+		};
+	} else {
+		var person = item.a;
+		return {bidAmount: $elm$core$Maybe$Nothing, bidder: person};
+	}
 };
-var $author$project$Main$SetFormParticipant = function (a) {
-	return {$: 'SetFormParticipant', a: a};
+var $elm$core$String$concat = function (strings) {
+	return A2($elm$core$String$join, '', strings);
 };
-var $elm$html$Html$input = _VirtualDom_node('input');
+var $elm$core$String$fromFloat = _String_fromNumber;
+var $author$project$Auction$parseHistoryLogItem = function (item) {
+	var _v0 = item.bidAmount;
+	if (_v0.$ === 'Nothing') {
+		return $elm$core$String$concat(
+			_List_fromArray(
+				['{', item.bidder.name, ' folded...', '}']));
+	} else {
+		var amount = _v0.a;
+		return $elm$core$String$concat(
+			_List_fromArray(
+				[
+					'{',
+					item.bidder.name,
+					' made a bid of ',
+					$elm$core$String$fromFloat(amount),
+					'}'
+				]));
+	}
+};
+var $author$project$Main$historyLogView = function (history) {
+	return A2(
+		$elm$html$Html$div,
+		_List_Nil,
+		_List_fromArray(
+			[
+				A2(
+				$elm$html$Html$h3,
+				_List_Nil,
+				_List_fromArray(
+					[
+						$elm$html$Html$text('History')
+					])),
+				A2(
+				$elm$html$Html$div,
+				_List_Nil,
+				A2(
+					$elm$core$List$map,
+					function (x) {
+						return A2(
+							$elm$html$Html$p,
+							_List_Nil,
+							_List_fromArray(
+								[
+									$elm$html$Html$text(
+									$author$project$Auction$parseHistoryLogItem(
+										$author$project$Auction$loggifyHistoryItem(x)))
+								]));
+					},
+					history))
+			]));
+};
 var $elm$virtual_dom$VirtualDom$Normal = function (a) {
 	return {$: 'Normal', a: a};
 };
@@ -5353,6 +5605,13 @@ var $elm$html$Html$Events$onClick = function (msg) {
 		'click',
 		$elm$json$Json$Decode$succeed(msg));
 };
+var $author$project$Main$AddParticipant = function (a) {
+	return {$: 'AddParticipant', a: a};
+};
+var $author$project$Main$SetFormParticipant = function (a) {
+	return {$: 'SetFormParticipant', a: a};
+};
+var $elm$html$Html$input = _VirtualDom_node('input');
 var $elm$html$Html$Events$alwaysStop = function (x) {
 	return _Utils_Tuple2(x, true);
 };
@@ -5526,8 +5785,6 @@ var $author$project$Main$roomListViewer = function (rooms) {
 			},
 			rooms));
 };
-var $elm$html$Html$h3 = _VirtualDom_node('h3');
-var $elm$core$String$fromFloat = _String_fromNumber;
 var $author$project$Main$totalPriceToString = function (mFloat) {
 	if (mFloat.$ === 'Nothing') {
 		return '';
@@ -5571,7 +5828,23 @@ var $author$project$Main$view = function (model) {
 				$author$project$Main$totalPriceView(model.totalRent),
 				$author$project$Main$participantViewer(model.participants),
 				$author$project$Main$roomListViewer(model.rooms),
-				$author$project$Main$auctionDashboard(model)
+				$author$project$Main$auctionDashboard(model),
+				$author$project$Main$historyLogView(model.bidHistory),
+				A2(
+				$elm$html$Html$button,
+				_List_fromArray(
+					[
+						$elm$html$Html$Events$onClick(
+						$author$project$Main$ReceiveHistory(
+							A2(
+								$author$project$Auction$Bid,
+								500.0,
+								{name: 'Nelly'})))
+					]),
+				_List_fromArray(
+					[
+						$elm$html$Html$text('test history add')
+					]))
 			]));
 };
 var $author$project$Main$main = $elm$browser$Browser$element(
